--- a/src/next-app/styles/components/navigationBar.module.css
+++ b/src/next-app/styles/components/navigationBar.module.css
@@ -1,26 +1,25 @@
 .container {
+    display: flex;
+    flex: 1;
     height: 3em;
-    align-items: center;
+    /* align-items: center; */
     background-color: aqua;
-    align-content: center;
-    justify-content: center;
+    /* align-content: center; */
+    /* justify-content: center; */
     flex-direction: row;
 }
 
 .homeButton {
-    align-items: center;
-    flex-direction: row;
-}
-
-.navBar {
-    align-content: center;
-    justify-content: center;
-    flex-direction: row;
+    background-color: antiquewhite;
+    /* align-items: center; */
+    /* flex-direction: row; */
 }
 
 .button {
-    align-content: center;
-    justify-content: center;
+    flex: 1;
+    /* align-content: center; */
+    /* justify-content: center; */
+    padding: 1em;
     margin: 1em;
-    flex-direction: row;
+    /* flex-direction: row; */
 }
