--- a/src/next-app/styles/components/navigationBar.module.css
+++ b/src/next-app/styles/components/navigationBar.module.css
@@ -2,19 +2,17 @@
     display: flex;
     height: 5em;
     align-items: center;
-    background-color: aqua;
+    background-color: red;
     justify-content: center;
     
 }
 
 .navBar a {
     margin: 1em;
-    padding: 1.5em;
     width: 6em;
     height: 1.5em;
-    border: 3px solid black;
-    border-radius: 1em;
     text-align: center;
+    color: white;
     /* align-items: center; */
     /* justify-content: center; */
 }
