--- a/src/next-app/styles/Home.module.css
+++ b/src/next-app/styles/Home.module.css
@@ -1,6 +1,6 @@
 .container {
-  background-image: url('../image/background.jpg');
-  padding: 0 2rem;
+  display: flex;
+  flex-direction: column;
 }
 
 .main {
@@ -11,22 +11,12 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-image: url('../image/background.jpg');
 }
 
-.footer {
-  display: flex;
-  flex: 1;
-  padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
+.main h1 {
+  color: #fafafa;
+  font-size: 80px;
 }
 
 .title a {
@@ -72,6 +62,7 @@
   justify-content: center;
   flex-wrap: wrap;
   max-width: 800px;
+  color: #fafafa;
 }
 
 .card {
