--- a/src/next-app/styles/Home.module.css
+++ b/src/next-app/styles/Home.module.css
@@ -14,26 +14,11 @@
   background-image: url('../image/background.jpg');
 }
 
-.main h1 {
-  color: #fafafa;
-  font-size: 80px;
-}
-
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
-
 .title {
   margin: 0;
   line-height: 1.15;
   font-size: 4rem;
+  color: #ffffff;
 }
 
 .title,
@@ -80,8 +65,8 @@
 .card:hover,
 .card:focus,
 .card:active {
-  color: #0070f3;
-  border-color: #0070f3;
+  color: red;
+  border-color: red;
 }
 
 .card h2 {
@@ -95,9 +80,14 @@
   line-height: 1.5;
 }
 
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
+.subMain {
+  padding: 4rem 0;
+  max-height: 100vh;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 @media (max-width: 600px) {
