--- a/src/next-app/styles/Home.module.css
+++ b/src/next-app/styles/Home.module.css
@@ -12,6 +12,7 @@
   justify-content: center;
   align-items: center;
   background-image: url('../image/background.jpg');
+  background-size: 100%;
 }
 
 .title {
@@ -59,7 +60,7 @@
   border: 1px solid #eaeaea;
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
+  max-width: 400px;
 }
 
 .card:hover,
