--- a/src/next-app/styles/components.module.css
+++ b/src/next-app/styles/components.module.css
@@ -2,11 +2,11 @@
     display: flex;
     flex: 1;
     flex-direction: row;
-    min-height: 50em;
+    min-height: 90vh;
 }
 
 .contentSideBar {
-    width: 20%;
+    width: 15%;
     flex-direction: column;
     /* border-right: 2px solid aliceblue; */
     background-color: aliceblue;
@@ -30,6 +30,12 @@
 }
 
 .customButtonText {
+    color: black;
+    font-weight: bold;
+    font-size: 1.5em;
+}
+
+.customButtonText:active {
     color: blue;
 }
 
@@ -42,6 +48,7 @@
     align-items: center;
     background-color: #15151e;
     color: #fff;
+    height: 5vh;
 }
   
 .customFooter a {
@@ -54,7 +61,7 @@
 
 .navBar {
     display: flex;
-    height: 5em;
+    min-height: 5em;
     align-items: center;
     background-color: red;
     justify-content: center;
