--- a/src/next-app/styles/Home.module.css
+++ b/src/next-app/styles/Home.module.css
@@ -116,6 +116,20 @@
   border-color: #3558f2;
 }
 
+.troll {
+  display: flex;
+  flex: 1;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+}
+
+.troll h1 a {
+  text-decoration: underline;
+}
+
 @media (max-width: 600px) {
   .grid {
     width: 100%;
