--- a/src/next-app/styles/pages/Game.module.css
+++ b/src/next-app/styles/pages/Game.module.css
@@ -1,5 +1,26 @@
-.content {
+.container {
     display: flex;
-    width: 100%;
-    justify-content: center;
+    flex: 1;
+    flex-direction: column;
+}
+
+.title {
+    border-bottom: 1px solid darkgray;
+}
+
+.title h1 {
+    font-size: 3em;
+}
+
+.content {
+    padding: 1em;
+}
+
+.content p {
+    font-size: 1.5em;
+    line-height: 2em;
+}
+
+.content h2 a {
+    text-decoration: underline;
 }
